force-app/main/default/objects/OpportunityNotice__c/OpportunityNotice__c.object-meta.xml
<CustomObject>
    <description>공지사항</description>
    <label>Opportunity Notice</label>
    <nameField>
        <displayFormat>ON-{YYYY}{MM}{00000}</displayFormat>
        <label>Opportunity Notice No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Notice</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>