force-app/main/default/objects/OpportunityNotice__c/fields/NoticeCN__c.field-meta.xml
<CustomField>
    <fullName>NoticeCN__c</fullName>
    <label>Notice CN</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>