force-app/main/default/objects/OpportunityNotice__c/fields/NoticeEN__c.field-meta.xml
<CustomField>
    <fullName>NoticeEN__c</fullName>
    <label>Notice EN</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>