force-app/main/default/objects/OpportunityNotice__c/fields/NoticeKR__c.field-meta.xml
<CustomField>
    <fullName>NoticeKR__c</fullName>
    <label>Notice KR</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>