force-app/main/default/objects/OpportunityNotice__c/recordTypes/Guide.recordType-meta.xml
<RecordType>
    <fullName>Guide</fullName>
    <active>true</active>
    <description>공사계약 안전보건 준수사항 가이드</description>
    <label>Guide</label>
</RecordType>