force-app/main/default/objects/OpportunityNotice__c/recordTypes/Notice.recordType-meta.xml
<RecordType>
    <fullName>Notice</fullName>
    <active>true</active>
    <description>해외 사업기회 검토사항</description>
    <label>Notice</label>
</RecordType>